changed the index to reflect the directory change

--- a/tutorials/Image_Map/bexcolorpicker-tutpop.html
+++ b/tutorials/Image_Map/bexcolorpicker-tutpop.html
@@ -22,37 +22,37 @@ function GetClick( ) {
 <table cellspacing=0 cellpadding=0 border=0>
 <form name="COLORS" >
     <tr>
-        <td><img alt=" " src="perlotine1/imap-table1-0-0.png" width="290" height="73"></td>
+        <td><img class="map" alt=" " src="../Perlotine/imap-table1-0-0.png" width="290" height="73"></td>
     </tr><tr>
-        <td><img src="perlotine1/imap-table1-1-0.png" width="290" height="177" border="0" usemap="#map" /></td>
+        <td><img class="map" src="../Perlotine/imap-table1-1-0.png" width="290" height="177" border="0" usemap="#map" /></td>
     </tr><tr>
-        <td><img alt=" " src="perlotine1/imap-table1-2-0.png" width="290" height="17"></td>
+        <td><img class="map" alt=" " src="../Perlotine/imap-table1-2-0.png" width="290" height="17"></td>
     </tr><tr>
         <td><table cellspacing=0 cellpadding=0 border=0>
             <tr width="290">
-               <td><img alt=" " src="perlotine2/imap-table1-3-0-0.png" width="10" height="21"></td>
+               <td><img class="map" alt=" " src="../Perlotine/imap-table1-3-0-0.png" width="10" height="21"></td>
                <td><input type="text" name="hex_value" value="" size="26" align="left"></td>
-               <td bgcolor="#d5d2de" width="68" align="right"><img alt=" " src="perlotine2/imap-table1-3-0-2.png" width="61" height="21"></td>
+               <td bgcolor="#d5d2de" width="68" align="right"><img class="map" alt=" " src="../Perlotine/imap-table1-3-0-2.png" width="61" height="21"></td>
            </tr>
        </table></td>
     </tr><tr>
         <td valign="top"><table cellspacing=0 cellpadding=0 border=0>
             <tr>
-              <td><img alt=" " src="perlotine4/imap-table1-4-0-0.png" width="5" height="6"></td>
-              <td><img alt=" " src="perlotine4/imap-table1-4-0-1.png" width="277" height="6"></td>
-              <td><img alt=" " src="perlotine4/imap-table1-4-0-2.png" width="8" height="6"></td>
+              <td><img class="map" alt=" " src="../Perlotine/imap-table1-4-0-0.png" width="5" height="6"></td>
+              <td><img class="map" alt=" " src="../Perlotine/imap-table1-4-0-1.png" width="277" height="6"></td>
+              <td><img class="map" alt=" " src="../Perlotine/imap-table1-4-0-2.png" width="8" height="6"></td>
           </tr>
           <tr>
-              <td><img alt=" " src="perlotine4/imap-table1-4-1-0.png" width="5" height="36"></td>
+              <td><img class="map" alt=" " src="../Perlotine/imap-table1-4-1-0.png" width="5" height="36"></td>
               <td bgcolor="#d5d2de" width="277" height="36" align="right">
                   <input type="button" name="reset_button" value="Reset" onclick="document.forms[0].hex_value.value=''; held=false">&nbsp;
 	      	      <input type="button" name="close_button" value="Pick " onclick="window.close()">&nbsp;</td>
-              <td><img alt=" " src="perlotine4/imap-table1-4-1-2.png" width="8" height="36"></td>
+              <td><img class="map" alt=" " src="../Perlotine/imap-table1-4-1-2.png" width="8" height="36"></td>
           </tr>
           <tr>
-              <td><img alt=" " src="perlotine4/imap-table1-4-2-0.png" width="5" height="8"></td>
-              <td><img alt=" " src="perlotine4/imap-table1-4-2-1.png" width="277" height="8"></td>
-              <td><img alt=" " src="perlotine4/imap-table1-4-2-2.png" width="8" height="8"></td>
+              <td><img class="map" alt=" " src="../Perlotine/imap-table1-4-2-0.png" width="5" height="8"></td>
+              <td><img class="map" alt=" " src="../Perlotine/imap-table1-4-2-1.png" width="277" height="8"></td>
+              <td><img class="map" alt=" " src="../Perlotine/imap-table1-4-2-2.png" width="8" height="8"></td>
           </tr></table></td>
     </tr>
 </form></table>
