--- a/tutorials/Perlotine/index.html
+++ b/tutorials/Perlotine/index.html
@@ -69,7 +69,7 @@
   This is the product of the first slicing with Perlotine.
 </p>
 <p>
-  This is a 3 element table. We will be slicing the middle section again, for The GIMP Table Magic Plug-in in the third tutorial. 
+  This is a 3 element table. We will be slicing the middle section again, for The GIMP Table Magic Plug-in in the third tutorial, yet to be written. 
   The bottom section will be sliced up to contain a dialog box for the color number to return to for both color pickers, so we will slice that next.
 </p>
 <p>
@@ -243,7 +243,7 @@
 </td></tr></table>
 
 <div class="code">
-<p>Ugly ugly HTML (that works in mozilla)</p>
+<p>&lt!--  Ugly ugly HTML (that works in mozilla)  --&gt;</p>
 &lt;table cellspacing=0 cellpadding=0 border=0&gt;
     &lt;tr&gt;
         &lt;td colspan=&quot;3&quot;&gt;&lt;img alt=&quot; &quot; src=&quot;imap-table1-0-0.png&quot; width=&quot;290&quot; height=&quot;73&quot;&gt;&lt;/td&gt;
