added the missing two splashes.

--- a/about/splash-cvs.html
+++ b/about/splash-cvs.html
@@ -62,12 +62,12 @@
 </td></tr>
 <tr><td>
   <div  class="subtitle">CVS: 1.13</div>
-  <a href="gimp1_1_splash-1.13.png"><img src="gimp1_1_splash-1.13-t.png" width="" height="" alt="1.13"/></a><br />
-  artist:  tigert</p>
+  <a href="gimp1_1_splash-1.13.png"><img src="gimp1_1_splash-1.13-t.png" width="150" height="135" alt="1.13"/></a><br />
+  artist:  adam</p>
 </td><td>
   <div  class="subtitle">CVS: 1.14</div>
-  <a href="gimp1_1_splash.1.14.png"><img src="gimp1_1_splash.1.14-t.png" width="" height="" alt="1.14"/></a><br />
-  artist:  tigert</p>
+  <a href="gimp1_1_splash.1.14.png"><img src="gimp1_1_splash.1.14-t.png" width="150" height="135" alt="1.14"/></a><br />
+  artist:  adam</p>
 </td></tr>
 <tr><td>
   <div  class="subtitle">CVS: 1.15</div>
