--- a/about/splash-cvs.html
+++ b/about/splash-cvs.html
@@ -62,7 +62,7 @@
 </td></tr>
 <tr><td>
   <div  class="subtitle">CVS: 1.13</div>
-  <a href="gimp1_1_splash-1.13.png"><img src="gimp1_1_splash-1.13-t.png" width="150" height="135" alt="1.13"/></a><br />
+  <a href="gimp1_1_splash.1.13.png"><img src="gimp1_1_splash.1.13-t.png" width="150" height="135" alt="1.13"/></a><br />
   artist:  adam</p>
 </td><td>
   <div  class="subtitle">CVS: 1.14</div>
@@ -140,6 +140,33 @@
   <div  class="subtitle">CVS: 1.12</div>
   <a href="gimp_splash.1.12.png"><img src="gimp_splash.1.12-t.png" width="102" height="150" alt="1.12"/></a><br />
   artist:  nomis</p>
+</td></tr>
+<tr><td>
+  <div  class="subtitle">CVS: 1.1</div>
+  <a href="gimp_splash.gif"><img src="gimp_splash-t.png" width="149" height="112" alt="1.1"/></a><br />
+  artist:  nomis, Sven</p>
+</td><td>
+  <div  class="subtitle">CVS: 1.2</div>
+  <a href="gimp_splashpng.1.2.png"><img src="gimp_splashpng.1.2-t.png" width="117" height="151" alt="1.2"/></a><br />
+  artist:  Sven</p>
+</td></tr>
+<tr><td>
+  <div  class="subtitle">CVS: 1.3</div>
+  <a href="gimp_splashpng.1.3.png"><img src="gimp_splashpng.1.3-t.png" width="117" height="151" alt="1.3"/></a><br />
+  artist:  nomis, Sven</p>
+</td><td>
+  <div  class="subtitle">CVS: 1.4</div>
+  <a href="gimp_splashpng.1.4.png"><img src="gimp_splashpng.1.4-t.png" width="126" height="150" alt="1.4"/></a><br />
+  artist:  nomis</p>
+</td></tr>
+<tr><td>
+  <div  class="subtitle">CVS: 1.5</div>
+  <a href="gimp_splashpng.1.5.png"><img src="gimp_splashpng.1.5-t.png" width="150" height="145" alt="1.5"/></a><br />
+  artist:  jimmac</p>
+</td><td>
+  <div  class="subtitle">CVS: 1.6</div>
+  <a href="gimp_splashpng.1.6.png"><img src="gimp_splashpng.1.4-t.png" width="150" height="145" alt="1.6"/></a><br />
+  artist:  unknown</p>
 </td></tr>
 
 
