mistakes and cosmetics fixed.

--- a/about/splash-cvs.html
+++ b/about/splash-cvs.html
@@ -157,7 +157,7 @@
 </td><td>
   <div  class="subtitle">CVS: 1.4</div>
   <a href="gimp_splashpng.1.4.png"><img src="gimp_splashpng.1.4-t.png" width="126" height="150" alt="1.4"/></a><br />
-  artist:  nomis</p>
+  artist:  Sven, Tim Pritlove</p>
 </td></tr>
 <tr><td>
   <div  class="subtitle">CVS: 1.5</div>
@@ -165,7 +165,7 @@
   artist:  jimmac</p>
 </td><td>
   <div  class="subtitle">CVS: 1.6</div>
-  <a href="gimp_splashpng.1.6.png"><img src="gimp_splashpng.1.4-t.png" width="150" height="145" alt="1.6"/></a><br />
+  <a href="gimp_splashpng.1.6.png"><img src="gimp_splashpng.1.6-t.png" width="150" height="145" alt="1.6"/></a><br />
   artist:  unknown</p>
 </td></tr>
 
