--- a/about/splash-1.3.html
+++ b/about/splash-1.3.html
@@ -59,7 +59,7 @@
   <div  class="subtitle">tarball:  1.3.9</div>
   <a href="gimp_splashpng.1.4.png"><img src="gimp_splashpng.1.4-t.png" width="126" height="150" alt="1.4"/></a>
   <p>CVS: 1.4<br />
-  artist: Sven and Tim Pritlove</p>
+  artist: Sven, Tim Pritlove</p>
 </td></tr>
 <tr><td>
   <div  class="subtitle">tarball: 1.3.10 </div>
