--- a/about/splash-1.3.html
+++ b/about/splash-1.3.html
@@ -32,29 +32,29 @@
   <div  class="subtitle">tarball: 1.3.4 </div>
   <a href="gimp_splashpng.1.2.png"><img src="gimp_splashpng.1.2-t.png" width="117" height="151" alt=""/></a>
   <p>CVS: 1.2<br />
-  artist: Sven</p>
+  artist: nomis, Sven</p>
 </td><td>
   <div  class="subtitle">tarball:  1.3.5</div>
   <a href="gimp_splashpng.1.2.png"><img src="gimp_splashpng.1.2-t.png" width="117" height="151" alt=""/></a>
   <p>CVS: 1.2<br />
-  artist: Sven</p>
+  artist: nomis, Sven</p>
 </td></tr>
 <tr><td>
   <div  class="subtitle">tarball: 1.3.6 </div>
   <a href="gimp_splashpng.1.2.png"><img src="gimp_splashpng.1.2-t.png" width="117" height="151" alt=""/></a>
   <p>CVS: 1.2<br />
-  artist: Sven</p>
+  artist: nomis, Sven</p>
 </td><td>
   <div  class="subtitle">tarball:  1.3.7</div>
   <a href="gimp_splashpng.1.2.png"><img src="gimp_splashpng.1.2-t.png" width="117" height="151" alt=""/></a>
   <p>CVS: 1.2<br />
-  artist: Sven</p>
+  artist: nomis, Sven</p>
 </td></tr>
 <tr><td>
   <div  class="subtitle">tarball: 1.3.8 </div>
   <a href="gimp_splashpng.1.2.png"><img src="gimp_splashpng.1.2-t.png" width="117" height="151" alt="1.2"/></a>
   <p>CVS: 1.2<br />
-  artist: Sven</p>
+  artist: nomis, Sven</p>
 </td><td>
   <div  class="subtitle">tarball:  1.3.9</div>
   <a href="gimp_splashpng.1.4.png"><img src="gimp_splashpng.1.4-t.png" width="126" height="150" alt="1.4"/></a>
@@ -68,9 +68,9 @@
   artist: Sven and Tim Pritlove</p>
 </td><td>
   <div  class="subtitle">tarball:  1.3.11</div>
-  <a href="gimp_splashpng.1.5.png"><img src="gimp_splashpng.1.5-t.png" width="150" height="145" alt="1.5"/></a>
-  <p>CVS: 1.5<br />
-  artist: jimmac</p>
+  <a href="gimp_splashpng.1.6.png"><img src="gimp_splashpng.1.6-t.png" width="150" height="145" alt="1.6"/></a>
+  <p>CVS: 1.?<br />
+  artist: unknown</p>
 </td></tr>
 
 </table>
