--- a/about/splash-cvs.html
+++ b/about/splash-cvs.html
@@ -148,7 +148,7 @@
 </td><td>
   <div  class="subtitle">CVS: 1.2</div>
   <a href="gimp_splashpng.1.2.png"><img src="gimp_splashpng.1.2-t.png" width="117" height="151" alt="1.2"/></a><br />
-  artist:  Sven</p>
+  artist:  nomis, Sven</p>
 </td></tr>
 <tr><td>
   <div  class="subtitle">CVS: 1.3</div>
