TODO:  a big list of everything that needs to be done. TODO.gnomecvs:  a smaller list of everything that needs to be done     before the module can be moved to gnomecvs. TODO.auto:  a smaller list of the scripts that need to be written. unix/index.html:  removed FAQ url, fixed the gimp-help url.  added the url     to tile_cache.html. unix/user_install.html:  added the url to tile_cache.html. docs/index.html, docs/gimp-help, docs/devlop-docs:  added the directories and     reflected the additions in the index page. maillists.html, mail_lists.html, includes/linkbar.inc, links/index:  changed     the file name from maillists.html to mail_lists.html as i saw this one printed     in a book as a wgo document.  the change was reflected everywhere that i can     think of.

--- a/unix/index.html
+++ b/unix/index.html
@@ -5,14 +5,13 @@
 
 <div class="heading">GIMP for Unix</div>
 <div class="subtitle"><a href="INSTALL">Installation Instructions</a></div>
-<div class="subtitle"><a href="FIXME">FAQ's</a></div>
 <div class="subtitle">Linux How To's</div>
   <ul>
     <li><a href="howtos/cvs-stable.html">Get and Build CVS GIMP 1.2</a></li>
   </ul>
 <div class="subtitle">The GIMP's Documentation</div>
   <ul>
-    <li><a href="gimp-help">Help Documentation</a></li>
+    <li><a href="../docs/gimp-help/">Help Documentation</a></li>
     <li><a href="man-gimp-1.2.html">man gimp</a></li>
     <li><a href="man-gimptool-1.2.html">man gimptool</a></li>
     <li><a href="man-gimprc.1.html">man gimprc</a></li>
@@ -21,6 +20,7 @@
 <div class="subtitle">The GIMP's Preferences</div>
   <ul>
     <li><a href="user_install.html">user_install</a></li>
+    <li><a href="tile-cache.html">Tile Cache</a></li>
     <li><a href="user_install.html">File --&gt;Preferences</a></li>
     <li><a href="gimprc.html">gimprc</a></li>
     <li><a href="gtkrc.html">gtkrc</a></li>
