--- a/links/index.html
+++ b/links/index.html
@@ -24,7 +24,7 @@ This page contains the best links to interesting GIMP-sites:
 <a name="maillists">
 <!--#include virtual="/includes/urls_maillist.inc" -->
 <p>
-  <A href="maillists.html">The GIMP Maillist Page</a><br />
+  <A href="mail_lists.html">The GIMP Maillist Page</a><br />
   A more thorough overview of The GIMP related mail lists and some mail list
   ettiquette.
 </p>
