--- a/unix/user_install.html
+++ b/unix/user_install.html
@@ -36,8 +36,13 @@ to be.  There is a scroll bar to see all the things The GIMP has for you.
 </p>
 <div class="subtitle">GIMP Performance Tuning</div>
 <p>
-Things to consider when setting the tile cache
-(<a href="ui-performance.png">screenshot</a>).
+Setting your memory usage is not an easy thing.  So much depends on what your needs
+are for the gimp and what hardware you have to work with.  You have two options
+at this point.  Go with the default value the developers have set here, or determine
+the best value from this <a href="tile_cache.html">tile_cache</a> explanation.  
+This <a href="tile_cache.html">tile_cache</a> information might also be helpful 
+to you if you are encountering memory problems when using the gimp.
+(<a href="ui-performance.png">screenshot</a>)
 </p>
 <p>
 /tmp might be a good place for the swap.
