tutorials/Anti-Alias_Treshhold/, tutorials/Anti-Alias_Threshhold: removed the mispelled directory and added the (i hope) properly spelled one.
tutorials/Channel_Mixer:  removed this directory.

--- a/tutorials/Anti-Aliased_Threshold/index.html
+++ b/tutorials/Anti-Aliased_Threshold/index.html
@@ -44,14 +44,19 @@
   If you now take the original image layer, move it over the new one (make sure it has an alpha channel), and change its mode to "Color"
   in the layers dialog, you get nice results displayed above.
 </p>
+<p>
+ The original tutorial can be found at
+<!--#include virtual="/includes/url_tutorials-AntiAliased_Threshold.inc" -->.
+</p>
 </div>
 <!--#include virtual="/includes/tutnavbar.inc" -->
     <div>
       <span id="footerleft">
-        Tutorial &copy; 2001-2002 <a href="mailto:drc@nospam.gnome.org">Ville Pätsi</a>
+        Tutorial &copy; 2001-2002 
+<!--#include virtual="/includes/url_mail-patsiv.inc" -->
       </span>
       <span id="footerright">
-        <a href="mailto:webmaster@gimp.org">webmaster@gimp.org</a>
+<!--#include virtual="/includes/url_mail-webmaster.inc" -->
       </span>
     </div>
 
