Modified ChangeLog. Fixed one image that was wrong.
Modified ChangeLog.
Fixed one image that was wrong.

--- a/tutorials/Lite_Quickies/index.html
+++ b/tutorials/Lite_Quickies/index.html
@@ -60,7 +60,7 @@
 <div class="subtitle">Make jpegs Smaller</div>
 <p class="images">
   <a href="jpegsave-menu.png"><img src="jpegsave-menu-t.png" alt=""/></a>
-  <a href="jpegsave-dialog-de-t.png"><img src="jpegsave-dialog-de.png" alt=""/></a>
+  <a href="jpegsave-dialog-de.png"><img src="jpegsave-dialog-de-t.png" alt=""/></a>
 </p>
 <p>
   You can make your jpegs smaller without changing the pixel width of the image. Actually you can change the weight of the image a lot. 
