fixed a bad image url.

--- a/about/splash-cvs.html
+++ b/about/splash-cvs.html
@@ -53,7 +53,7 @@
 </td></tr>
 <tr><td>
   <div  class="subtitle">CVS: 1.11</div>
-  <a href="gimp1_1_splash-1.11.png"><img src="gimp1_1_splash-1.11-t.png" width="150" height="134" alt="1.11"/></a><br />
+  <a href="gimp1_1_splash.1.11.png"><img src="gimp1_1_splash.1.11-t.png" width="150" height="134" alt="1.11"/></a><br />
   artist: tigert</p>
 </td><td>
   <div  class="subtitle">CVS: 1.12</div>
