Modified ChangeLog. Changed Channel Mixer to Color2BW. Add the first port
Modified ChangeLog.
Changed Channel Mixer to Color2BW.
Add the first port of the new BW tutorial.

--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -108,7 +108,7 @@
 
 <div class="subtitle">Photo Editing</div>
 <p>
-  <a href="Channel_Mixer/">Channel Mixer</a> Use the Channel Mixer to create B&amp;W photos from color photos.
+  <a href="Color2BW/">Color2BW</a> Converting Color Images to B&amp;W.
 </p>
 <p>
   <a href="Reducing_CCD_Noise/">Reducing CCD Noise</a> Learn how to reduce the CCD Noise in photos.
