tutorials/Color2BW/: name="# to name=" style/default.css: clear: left; to div.newsheading

--- a/tutorials/Color2BW/index.html
+++ b/tutorials/Color2BW/index.html
@@ -35,7 +35,7 @@
   Here is an example image, loaded into The GIMP. I thought it might look nice as a black and white image.
 </p>
 
-<a name="#grayscale">
+<a name="grayscale">
 <div class="subtitle">Via Grayscale</div>
 </a>
 <p class="images">
@@ -55,7 +55,7 @@
   I suspect the GIMP uses a similar formula. My experiments with the Channel Mixer (more on this below) support this.
 </p>
 
-<a name="#desaturate">
+<a name="desaturate">
 <div class="subtitle">Via Desaturate</div>
 </a>
 <p class="images">
@@ -74,7 +74,7 @@
   the algorithm is giving us a remix of 60% of the clean, detailed green channel.
 </p>
 
-<a name="#decomposeRGB">
+<a name="decomposeRGB">
 <div class="subtitle">Via Decompose RGB</div>
 </a>
 <p class="images">
@@ -106,7 +106,7 @@
   RGB decomposition is important to give you an idea of where the important information is in your image, and where the noise is.
 </p>
 
-<a name="#decomposeHSV">
+<a name="decomposeHSV">
 <div class="subtitle">Via Decompose HSV</div>
 </a>
 <p class="images">
@@ -118,7 +118,7 @@
   Right-click on the original image and select <span class="filter">&lt;Image&gt;Image-&gt;Mode-&gt;Decompose</span>. Select the HSV option and click OK.
 </p>
 
-<a name="#decomposeLAB">
+<a name="decomposeLAB">
 <div class="subtitle">Via Decompose LAB</div>
 </a>
 <p class="images">
@@ -141,7 +141,7 @@
   I don't know whether it comes bundled with newer versions. I downloaded it from the <a href="http://registry.gimp.org/">GIMP Plug-in Registry</a> and compiled it myself.
 </p>
 
-<a name="#decomposeCMYK">
+<a name="decomposeCMYK">
 <div class="subtitle">Via Decompose CMYK</div>
 </a>
 <p class="images">
@@ -152,7 +152,7 @@
   Just for fun I tried decomposing into CMYK. The Black channel is interesting: it resembles a negative.
 </p>
 
-<a name="#channelmixer">
+<a name="channelmixer">
 <div class="subtitle">Via Channel Mixer</div>
 </a>
 <p class="images">
