Modified ChangeLog. Add the original site to the index file.
Modified ChangeLog.
Add the original site to the index file.

--- a/tutorials/Lite_Quickies/index.html
+++ b/tutorials/Lite_Quickies/index.html
@@ -241,6 +241,10 @@
   Using an <a href="http://antwrp.gsfc.nasa.gov/apod/ap000228.html">APOD</a> image. I rotated it once to demonstrate. <a href="sombrero_vlt-270.jpg">270 degrees</a>.
 </p>
 
+<p>
+  The original tutorial can be found <a href="http://carol.gimp.org/mygimp/tutorials/">here</a>.
+</p>
+
 </div>
 <!--#include virtual="/includes/tutnavbar.inc" -->
     <div>
