Modified ChangeLog. Minor Fixes in the HTML.
Modified ChangeLog.
Minor Fixes in the HTML.

--- a/tutorials/Lite_Quickies/index.html
+++ b/tutorials/Lite_Quickies/index.html
@@ -189,7 +189,7 @@
   <b>Case of grayed out JPEG option:</b><br />
   <a href="mode-jpegno.png"><span class="filter">&lt;Image&gt;File-&gt;Save As...</span>[Extension: JPEG]</a> is not an option. 
   First, <a href="mode-flatten-menu.png"><span class="filter">&lt;Image&gt;Layers-&gt;Flatten Image</span></a>. 
-  Then <a href="mode-menu.png"><span class="filter">Image-&gt;Mode-&gt;RGB</span></a>
+  Then <a href="mode-menu.png"><span class="filter">&lt;Image&gt;Image-&gt;Mode-&gt;RGB</span></a>
 </p>
 <p>
   <b>Case of not being able to erase:</b><br />
@@ -199,7 +199,7 @@
 <p>
   <b>Case of grayed out GIF option:</b><br />
   <a href="mode-gifno.png"><span class="filter">&lt;Image&gt;File-&gt;Save As...</span>[Extension: GIF]</a> is not an option. 
-  <a href="mode-menu.png"><span class="filter">&lt;Image&lt;Image-&gt;Mode-&gt;Indexed....</span></a> 
+  <a href="mode-menu.png"><span class="filter">&lt;Image&gt;Image-&gt;Mode-&gt;Indexed....</span></a> 
   Best to just hit "Okay" in the <a href="mode-index.png">dialog</a> that pops up.
 </p>
 
