Modified ChangeLog. One more HTML fix.
Modified ChangeLog.
One more HTML fix.

--- a/tutorials/Lite_Quickies/index.html
+++ b/tutorials/Lite_Quickies/index.html
@@ -181,7 +181,7 @@
   Don't worry about Alpha beyond these two facts. 1) you cannot have transparent areas on your image without it. 
   2) you cannot save as a jpeg with it. Right click on the image and follow the menus <span class="filter">&lt;Image&gt;Layers-&gt;Add Alpha Channel</span>. 
   If it is <a href="mode-alphano.png">grayed out</a>, you have this alpha channel already and your image is ready to have transparency. 
-  The way to remove the alpha channel is not so obvious. Right click on the image, <span class="filter">Layers-&gt;Flatten Image</span> 
+  The way to remove the alpha channel is not so obvious. Right click on the image, <span class="filter">&lt;Image&gt;Layers-&gt;Flatten Image</span> 
   <a href="mode-flatten-menu.png">removes the alpha channel</a>, makes the menu entry gray. 
   Some plug-ins want the Alpha Channel, some don't, so be prepared to try it both ways.
 </p>
