--- a/team.html
+++ b/team.html
@@ -23,6 +23,7 @@
 <div class="subtitle">Tutorial Authors</div>
 <ul>
   <li>Adrian Likins</li>
+  <li>Atte André Jensen</li>
   <li>Carol Spears</li>
   <li>Dave Neary</li>
   <li>Dov Grobgeld</li>
