--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -111,6 +111,9 @@
   <a href="Reducing_CCD_Noise/">Reducing CCD Noise</a> Learn how to reduce the CCD Noise in photos.
 </p>
 <p>
+  <a href="Selective_Gaussian_Blur/">CCD Noise removal</a> Use selective Gaussian blur to remove CCD Noise in photos.
+</p>
+<p>
   <a href="ContrastMask/">Contrast Mask</a> Decrease problem contrast in photos.
 </p>
 <p>
