Modified ChangeLog. Minor HTML and Image fixes.
Modified ChangeLog.
Minor HTML and Image fixes.

--- a/tutorials/Selective_Gaussian_Blur/index.html
+++ b/tutorials/Selective_Gaussian_Blur/index.html
@@ -17,11 +17,11 @@
 <div class="subtitle">Step 1</div>
 <p class="images">
   <img src="01.png" alt=""/>
-  <img src="02.png" alt=""/>
+  <img src="02.jpg" alt=""/>
 </p>
 <p class="images">
   <img src="03.png" alt=""/>
-  <img src="04.png" alt=""/>
+  <img src="04.jpg" alt=""/>
 </p>
 <p>
   Since the selective Gaussian blur filter doesn't have a preview and is quite heavy to compute (proportional with blur radius), 
@@ -33,7 +33,7 @@
 
 <div class="subtitle">Step 2</div>
 <p class="images">
-  <img src="05.png" alt=""/>
+  <img src="05.jpg" alt=""/>
 </p>
 <p>
   The next thing is to experiment with different combinations of the settings ("blur radius" and "maximum delta") in the selective Gaussian blur filter.
@@ -96,7 +96,7 @@
 
 <div class="subtitle">Files</div>
 <p>
-  <a href="before.jpg">Before, 1280x960, JPEG (120 Kb)</a>
+  <a href="before.jpg">Before, 1280x960, JPEG (120 Kb)</a><br />
   <a href="after.jpg">After, 1280x960, JPEG (104 Kb)</a>
 </p>
 
