Modified ChangeLog. I am really tired...forgot one <br />.
Modified ChangeLog.
I am really tired...forgot one <br />.

--- a/tutorials/Selective_Gaussian_Blur/index.html
+++ b/tutorials/Selective_Gaussian_Blur/index.html
@@ -90,7 +90,7 @@
   you can get the larger files at the bottom of this page):
 </p>
 <p>
-  <b>First image</b>: Before.
+  <b>First image</b>: Before.<br />
   <b>Last image</b>: After (blur radius:8, maximum delta:7).
 </p>
 
