Modified ChangeLog. Anti-Aliased_Treshold was wrong so I changed it to
Modified ChangeLog.
Anti-Aliased_Treshold was wrong so I changed it to Anti-Aliased_Threshold otherwise the tutorial was not loaded on the page.
Made the "Using GAP" a link to /tutorials/Using_GAP/
Fixes in the HTML tags. Try to fix the last classes for the filters.
Fixed a spelling in the tutorial.
Fixed one more class="filter" in the tutorial.
Small fixes nothing that would make a big differense.
Add another <Image> to the tags of filter options to the tutorial.
Fixed the link to channel mixer tutorial now links to /tutorials/Color2BW/#channelmixer.
Fixed the links to the outside HTML examples. Spelling was wrong in step 5 for the class of the filter.
Changed Image->Channel Ops->Offset to Filter->Map->Make Seamless. Fixed the classes for filtering.
Made the "Advanced Animation" a link to /tutorials/Advanced_Animations/

--- a/tutorials/Advanced_Animations/index.html
+++ b/tutorials/Advanced_Animations/index.html
@@ -11,7 +11,7 @@
   That's why we'll start with a little theory before we move over to the practical part.
   <br /><br />
   The key function of the GAP is the move path dialog. 
-  Please go to the "Using GAP" tutorial to learn more about the tool.
+  Please go to the "<a href="/tutorials/Using_GAP/">Using GAP</a>" tutorial to learn more about the tool.
 </p>
 
 <div class="subtitle">Step 1</div>
