--- a/tutorials/Blown_Out_Highlights/index.html
+++ b/tutorials/Blown_Out_Highlights/index.html
@@ -93,9 +93,9 @@
   <img src="layers2.jpg" alt=""/>
 </p>
 <p>
-  Go back to the threshold image, Select/All (Ctrl+A) and Edit/Copy (Ctrl+C).
+  Go back to the threshold image, <span class="filter">&lt;Image&gt;Select-&gt;All</span> (Ctrl+A) and <span class="filter">&lt;Image&gt;Edit-&gt;Copy</span> (Ctrl+C).
   <br />
-  Edit/Paste it into the original image (it should go into the new channel).
+  <span class="filter">&lt;Image&gt;Edit-&gt;Paste</span> it into the original image (it should go into the new channel).
   <br />
   Click on the Layers tab and anchor the floating selection.
   <br />
@@ -111,7 +111,7 @@
   Click on the Channels tab again, and right click on the new channel and select Channel to Selection (Ctrl+S). 
   You may want to also click on the eye beside the channel to turn off visibility of the channel.
   <br /><br />
-  Now feather the selection (Select/Feather). I used a value of 15 pixels or so in this case.
+  Now feather the selection (<span class="filter">&lt;Image&gt;Select-&gt;Feather</span>). I used a value of 15 pixels or so in this case.
   <br />
   Finally (important!), click back on the Layers tab and select the Background layer, so the selection and further operations will apply to the image and not the channel mask.
 </p>
@@ -126,15 +126,16 @@
   Now the real work begins.
   <br />
   We've lost these pixels entirely, so we're going to have to graft some on from somewhere nearby using the clone tool. 
-  A description of how to use this tool is beyond the scope of this document (see the <a href="http://gimp-savvy.com/BOOK/index.html">GIMP savvy</a> to find out more about this tool).
+  A description of how to use this tool is beyond the scope of this document 
+  (see the <a href="http://gimp-savvy.com/BOOK/index.html">GIMP savvy</a> to find out more about this tool).
   <br /><br />
   I cloned from the light part of the leaf just beyond the dark band to the right of the blown out area. This gave me a similar light-dark-light transition. 
-  You can see the clone tool options and the brush (Dialogs/Brushes) I selected (at right).
+  You can see the clone tool options and the brush (<span class="filter">&lt;Image&gt;Dialogs-&gt;Brushes</span>) I selected (at right).
   <br />
   Zoom in and clone until you have the area filled with a realistic facimile of the missing detail. Most likely it will have a noticable transition around the edges. 
   That's OK, we'll fix that up next.
   <br />
-  Select/None and zoom out to inspect your work.
+  <span class="filter">&lt;Image&gt;Select-&gt;None</span> and zoom out to inspect your work.
 </p>
 
 <div class="subtitle">Step 8</div>
