--- a/tutorials/Changing_Background_Color_2/index.html
+++ b/tutorials/Changing_Background_Color_2/index.html
@@ -59,7 +59,7 @@
 </p>
 <p>
   With the selection complete and with an alpha channel just choose from the image menu <span class="filter">&lt;Image&gt;Edit-&gt;Clear</span>, 
-  and the image background will e gone.
+  and the image background will be gone.
 </p>
 
 <div class="subtitle">Step 6</div>
