--- a/tutorials/Custom_Brushes/index.html
+++ b/tutorials/Custom_Brushes/index.html
@@ -36,7 +36,7 @@
 </p>
 <p>
   Draw the images you want in the layers that were already created. In our case we will be drawing a picture of a happy face in 3 colours 
-  (red, green and yellow). At the end your layers should look something like this (see image on the left).
+  (red, green and yellow). At the end your layers should look something like this (see image above).
   <br />
   NOTE: Make sure you save your image as a standard GIMP .XCF file because GIMP cannot re-open a picture brush once it's saved.
 </p>
@@ -46,7 +46,8 @@
   <img src="thumb4.jpg" alt=""/>
 </p>
 <p>
-  The last step is to save our brush as a GIMP picture brush. The extension of this kind of brush is .GIH. So right click on the image, then choose File-&gt;Save As....
+  The last step is to save our brush as a GIMP picture brush. The extension of this kind of brush is .GIH. So right click on the image, then choose 
+  <span class="filter">&lt;Image&gt;File-&gt;Save As....</span>
   Because all brushes resides in the /gimp/brushes folder go to that folder and type in a name for the brush. For our example, the brush was named HAPPY.GIH
   <br />
   Then Save As Pixmap Brush Pipe dialog will ask you how you want to save the image. Since we have 3 layers make sure we put 3 in the Ranks edit box.
