--- a/tutorials/Drawing_Shapes/index.html
+++ b/tutorials/Drawing_Shapes/index.html
@@ -81,7 +81,7 @@
   Take the Gradient Tool again and, still with the same colors, make a gradient from farther up-left to near the selection's lower-right corner (see image on right). 
   This way we get a darker gradient suitable for the shadow-side.
   <br /><br />
-  <b>Hint!</b>Be careful with the edges. You don't want to leave any holes so the background can be seen through... 
+  <b>Hint!</b> Be careful with the edges. You don't want to leave any holes so the background can be seen through... 
   It's better to overlap the lower layer a bit than leave a space between them. 
 </p>
 
@@ -105,11 +105,13 @@
 <p>
   Now you have a cool image of a Light-Source-Shaded Cube. You can choose <span class="filter">&lt;Image&gt;Layers -&gt; Flatten Image</span> to merge the layers togerher 
   so you can save as jpeg or any other format than xcf. Or, better still, from the layers dialog, make the background invisible 
-  and choose <span class="filter">&lt;Image&gt;Layers -&gt; Merge Visible Layers</span> so you will have the background on a separate layer and you can work further on it if you like.
+  and choose <span class="filter">&lt;Image&gt;Layers -&gt; Merge Visible Layers</span> so you will have the background on a 
+  separate layer and you can work further on it if you like.
   <br /><br />
   The next thing is to start using the geometrical shapes as building blocks to make things. And you can twist the beziers to make a bit more fancy stuff...
   <br /><br />
-  I have provided <a href="example.xcf.gz">the xcf-file</a> for the image we just created, if you want to experiment with it, although you should be perfectly able to do just as good yourself.
+  I have provided <a href="example.xcf.gz">the xcf-file</a> for the image we just created, if you want to experiment with it, 
+  although you should be perfectly able to do just as good yourself.
   <br />
   Thanks for your interest.
   <br /><br />
