--- a/tutorials/Quickmask/index.html
+++ b/tutorials/Quickmask/index.html
@@ -39,7 +39,8 @@
 <p>
   After you click the red QuickMask button, a translucent red mask appears around your selection. This red mask represents the outside of your selection. 
   When you click the dashed QuickMask button to go back into normal selection mode, anything red will not be selected, and anything clear will be. 
-  So, let's start playing with this mask. First, right click on the image and select <span class="filter">Filters-&gt;Distorts-&gt;Waves</span> from the menu. Apply the filter, 
+  So, let's start playing with this mask. First, right click on the image and select 
+  <span class="filter">&lt;Image&gt;Filters-&gt;Distorts-&gt;Waves</span> from the menu. Apply the filter, 
   and watch what happens to the mask.
 </p>
 
