--- a/tutorials/Selective_Color/index.html
+++ b/tutorials/Selective_Color/index.html
@@ -41,7 +41,7 @@
   By whatever method suits you best, convert the duplicate image to B&amp;W. Once you have gotten the B&amp;W version that you like, 
   change it back to RGB mode (<span class="filter">&lt;Image&gt;Image-&gt;Mode-&gt;RGB</span>).
   <br /><br />
-  In this example, I tried the <a href="/tutorials/Photo_Edit/Channel_Mixer/">channel mixer</a>, but ended up in this case preferring 
+  In this example, I tried the <a href="/tutorials/Color2BW/#channelmixer">channel mixer</a>, but ended up in this case preferring 
   a simple conversion to grayscale (<span class="filter">&lt;Image&gt;Image-&gt;Mode-&gt;Grayscale</span>), then back to RGB.
 </p>
 
