--- a/tutorials/Smart_Sharpening/index.html
+++ b/tutorials/Smart_Sharpening/index.html
@@ -30,7 +30,7 @@
   photography web site (great web site BTW, I recommend it).
 </p>
 <p>
-  <a href="/tutorials/Photo_Edit/Smart_Sharpening/warp-sharp.html">New information and comparison with the "warp sharp" script!</a>
+  <a href="warp-sharp.html">New information and comparison with the "warp sharp" script!</a>
 </p>
 
 <div class="subtitle">The Procedure</div>
@@ -121,7 +121,7 @@
   <img src="image-edgedetect-grayscale-levels-blur.jpg" alt=""/>
 </p>
 <p>
-  Now apply a gaussian blur (<span class="filer">&lt;Image&gt;Filters-&gt;Blur-&gt;Gaussian Blur</span>) to smooth out the edges a little. 
+  Now apply a gaussian blur (<span class="filter">&lt;Image&gt;Filters-&gt;Blur-&gt;Gaussian Blur</span>) to smooth out the edges a little. 
   A radius of between 3 and 10 pixels (horizontal and vertical) should be enough. In the example I used 7.
 </p>
 
@@ -307,7 +307,7 @@
   You can see that in practice, changing modes does not always have this drastic of an effect.
   <br /><br />
   What should you do? I suggest trying it and look at the histogram! This is the beauty of the digital darkroom. If your image is not that noisy anyway, 
-  then no need to change modes, as suggested in the <a href="/tutorials/Photo_Edit/Smart_Sharpening/shortcuts.html">shortcuts</a>. 
+  then no need to change modes, as suggested in the <a href="shortcuts.html">shortcuts</a>. 
   However, this does point out a general piece of advice, which is to use the histogram regularly. 
   It is a great tool to monitor what is happening to your image "numerically" as you edit it.
 </p>
@@ -330,7 +330,7 @@
 <p>
   This example is kind of contrived. It doesn't really need much sharpening in the first place, and the smart-sharpened version looks over-sharpened. 
   I include it here mainly because it is pretty noisy, so it really shows what happens when you sharpen noise, and how the smart sharpening technique doesn't affect the noise. 
-  For details on reducing CCD noise (using this image as an example), <a href="/tutorials/Photo_Edit/Reducing_CCD_Noise/">see this tutorial</a>.
+  For details on reducing CCD noise (using this image as an example), <a href="/tutorials/Reducing_CCD_Noise/">see this tutorial</a>.
 </p>
 <p class="images">
   <img src="example2-edgesharpened-384x384.jpg" alt=""/>
