--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -27,7 +27,7 @@
   to transform your photo into a pen and ink watercolor like image. 
 </p>
 <p>
-  <a href="Anti-Aliased_Treshold/">Anti-Aliased Treshold</a>  Use curves and modes
+  <a href="Anti-Aliased_Threshold/">Anti-Aliased Threshold</a>  Use curves and modes
   to transform your photo into a pen and ink watercolor like image. 
 </p>
 <p>
