readded these files, i thought they were there already :(

--- a/developer/index.html
+++ b/developer/index.html
@@ -15,7 +15,7 @@
 <div class="subtitle">What is going on:</div>
 <p>
   <A href="unstable.html">The Unstable GIMP</a><br />
-  The last 10 change log entries from The Unstable GIMP.
+  The last 10 ChangeLog entries from The Unstable GIMP.
 </p>
 <p>
   <A href="bugzilla-new.html">The GIMP's New Bugs</a><br />
@@ -31,23 +31,23 @@
 </p>
 <p>
   <A href="stable.html">GIMP -r gimp-1-2 </a><br />
-  The last 10 change log entries from The Stable GIMP
+  The last 10 ChangeLog entries from The Stable GIMP
 </p>
 <p>
   <A href="help.html">GIMP Help</a><br />
-  The last 10 change log entries from The GIMP Help Project
+  The last 10 ChangeLog entries from The GIMP Help Project
 </p>
 <p>
   <A href="print.html">GIMP Print</a><br />
-  The last 10 change log entries from The GIMP Help Project
+  The last 10 ChangeLog entries from The GIMP Help Project
 </p>
 <p>
   <A href="film.html">FilmGIMP</a><br />
-  The last 10 change log entries from The FilmGIMP
+  The last 10 ChangeLog entries from The FilmGIMP
 </p>
 <p>
   <A href="gegl.html">GEGL</a><br />
-  The last 10 change log entries from GEGL
+  The last 10 ChangeLog entries from GEGL
 </p>
 
 
