*** empty log message ***

--- a/developer/bugzilla-fixed.html
+++ b/developer/bugzilla-fixed.html
@@ -1,52 +1,14 @@
-<!--#include virtual="/includes/header_pretitle.inc" -->
-<title>GIMP - Fixed Bugs - Last 10</title>
-<!--#include virtual="/includes/header_posttitle.inc" -->
-<div id="main">
-<div class="heading">Fixed Bugs - Last 10</div>
+#!/usr/bin/env python
 
-<div class="subtitle">YYYY-MM-DD Name</div>
-<p>
-  fixed bug
-</p>
-<div class="subtitle">YYYY-MM-DD Name</div>
-<p>
-  fixed bug
-</p>
-<div class="subtitle">YYYY-MM-DD Name</div>
-<p>
-  fixed bug
-</p>
-<div class="subtitle">YYYY-MM-DD Name</div>
-<p>
-  fixed bug
-</p>
-<div class="subtitle">YYYY-MM-DD Name</div>
-<p>
-  fixed bug
-</p>
-<div class="subtitle">YYYY-MM-DD Name</div>
-<p>
-  fixed bug
-</p>
-<div class="subtitle">YYYY-MM-DD Name</div>
-<p>
-  fixed bug
-</p>
-<div class="subtitle">YYYY-MM-DD Name</div>
-<p>
-  fixed bug
-</p>
-<div class="subtitle">YYYY-MM-DD Name</div>
-<p>
-  fixed bug
-</p>
-<div class="subtitle">YYYY-MM-DD Name</div>
-<p>
-  fixed bug
-</p>
+import cgi
+import cgitb; cgitb.enable()
 
+print "Content-Type: text/html" # header
+print                           # header
 
-<!--#include virtual="/includes/linkbar.inc" -->
-<!--#include virtual="/includes/footer.inc" -->
-  </body>
-</html>
+print "<HTML>"
+print "<head>"
+print "<title>test</title>"
+print "</head>"
+print "<body>hi world</body>"
+print "</HTML>"
