*** empty log message ***

--- a/developer/bugzilla-fixed.html
+++ b/developer/bugzilla-fixed.html
@@ -1,14 +1,52 @@
-#!/usr/bin/env python
+<!--#include virtual="/includes/header_pretitle.inc" -->
+<title>GIMP - Fixed Bugs - Last 10</title>
+<!--#include virtual="/includes/header_posttitle.inc" -->
+<div id="main">
+<div class="heading">Fixed Bugs - Last 10</div>
 
-import cgi
-import cgitb; cgitb.enable()
+<div class="subtitle">YYYY-MM-DD Name</div>
+<p>
+  fixed bug
+</p>
+<div class="subtitle">YYYY-MM-DD Name</div>
+<p>
+  fixed bug
+</p>
+<div class="subtitle">YYYY-MM-DD Name</div>
+<p>
+  fixed bug
+</p>
+<div class="subtitle">YYYY-MM-DD Name</div>
+<p>
+  fixed bug
+</p>
+<div class="subtitle">YYYY-MM-DD Name</div>
+<p>
+  fixed bug
+</p>
+<div class="subtitle">YYYY-MM-DD Name</div>
+<p>
+  fixed bug
+</p>
+<div class="subtitle">YYYY-MM-DD Name</div>
+<p>
+  fixed bug
+</p>
+<div class="subtitle">YYYY-MM-DD Name</div>
+<p>
+  fixed bug
+</p>
+<div class="subtitle">YYYY-MM-DD Name</div>
+<p>
+  fixed bug
+</p>
+<div class="subtitle">YYYY-MM-DD Name</div>
+<p>
+  fixed bug
+</p>
 
-print "Content-Type: text/html" # header
-print                           # header
 
-print "<HTML>"
-print "<head>"
-print "<title>test</title>"
-print "</head>"
-print "<body>hi world</body>"
-print "</HTML>"
+<!--#include virtual="/includes/linkbar.inc" -->
+<!--#include virtual="/includes/footer.inc" -->
+  </body>
+</html>
