*** empty log message ***

--- a/develop/bugzilla-fixed.html
+++ b/develop/bugzilla-fixed.html
@@ -3,49 +3,7 @@
 <!--#include virtual="/includes/header_posttitle.inc" -->
 <div id="main">
 <div class="heading">Fixed Bugs - Last 10</div>
-
-<div class="subtitle">YYYY-MM-DD Name</div>
-<p>
-  fixed bug
-</p>
-<div class="subtitle">YYYY-MM-DD Name</div>
-<p>
-  fixed bug
-</p>
-<div class="subtitle">YYYY-MM-DD Name</div>
-<p>
-  fixed bug
-</p>
-<div class="subtitle">YYYY-MM-DD Name</div>
-<p>
-  fixed bug
-</p>
-<div class="subtitle">YYYY-MM-DD Name</div>
-<p>
-  fixed bug
-</p>
-<div class="subtitle">YYYY-MM-DD Name</div>
-<p>
-  fixed bug
-</p>
-<div class="subtitle">YYYY-MM-DD Name</div>
-<p>
-  fixed bug
-</p>
-<div class="subtitle">YYYY-MM-DD Name</div>
-<p>
-  fixed bug
-</p>
-<div class="subtitle">YYYY-MM-DD Name</div>
-<p>
-  fixed bug
-</p>
-<div class="subtitle">YYYY-MM-DD Name</div>
-<p>
-  fixed bug
-</p>
-
-
+<!--#include virtual="bugzilla-fixed-list.html" -->
 <!--#include virtual="/includes/linkbar.inc" -->
 <!--#include virtual="/includes/footer.inc" -->
   </body>
