*** empty log message ***

--- a/tutorials/Liquid_Metal_Ripple/index.html
+++ b/tutorials/Liquid_Metal_Ripple/index.html
@@ -24,7 +24,7 @@
 		Next create a new layer in your new image, and call it <b>drop</b> (make sure the Layer Fill Type is Transparent).  Using the Elliptical Selection tool, select a perfect circle taking up most of the width and height.
 	</p>
 	<p class="images">
-		<img src="layers1.png" alt="" /><img src="image1.png" alt="" />
+		<img src="layers1.png" alt="" /><img src="drawing1.png" alt="" />
 	</p>
 </div>
 <!--#include virtual="/includes/tutnavbar.inc" -->
