*** empty log message ***

--- a/tutorials/Liquid_Metal_Ripple/index.html
+++ b/tutorials/Liquid_Metal_Ripple/index.html
@@ -20,12 +20,15 @@
 	<div class="subtitle">Making the drop</div>
 	
 	<p>
-		
 		Next create a new layer in your new image, and call it <b>drop</b> (make sure the Layer Fill Type is Transparent).  Using the Elliptical Selection tool, select a perfect circle taking up most of the width and height.
+	</p>
+	<p>
+		Now select the gradient tool, and in the Tool Options, choose <b>Blend>Custom Gradient</b> and <b>Gradient>Linear</b>.  If you don't already have the Gradients Dialog open, open it now, and choose the Brushed Aluminium gradient.  With the gradient tool still selected, drag your gradient straight down from the top of the circle to the bottom of the circle.  You should end up with something that looks like this:
 	</p>
 	<p class="images">
 		<img src="layers1.png" alt="" /><img src="drawing1.png" alt="" />
 	</p>
+
 </div>
 <!--#include virtual="/includes/tutnavbar.inc" -->
     <div>
