*** empty log message ***

--- a/tutorials/Liquid_Metal_Ripple/index.html
+++ b/tutorials/Liquid_Metal_Ripple/index.html
@@ -28,7 +28,18 @@
 	<p class="images">
 		<img src="layers1.png" alt="" /><img src="drawing1.png" alt="" />
 	</p>
-
+	<p>
+		With the circle still selected, change your foreground color to White and in the Tool Options dialog select <b>Blend>FG to Transparent</b>.  Create a new layer named <b>Shine 1</b> above the <b>drop</b> layer, and again drag your gradient straight down from the top of the circle to the bottom.  Select the Transform tool, and in Tool Options, choose <b>Perspective</b>.  In your drawing window, use the transform tool to transform the current selection to approximately the following proportions:
+	</p>
+	<p class="images">
+		<img src="drawing1b.png" alt="" />
+	</p>
+	<p>
+		Go ahead and finish the transformation, and you'll notice that it created a new Floating Layer with your transformed selection.  Click the Anchor button to anchor it to the current layer.
+	</p>
+	<p class="images">
+		<img src="layers2.png" alt="" /><img src="drawing2.png" alt="" />
+	</p>
 </div>
 <!--#include virtual="/includes/tutnavbar.inc" -->
     <div>
