--- a/team.html
+++ b/team.html
@@ -15,10 +15,12 @@
   <li>Web Coordinator, Carol Spears</li>
   <li>Guest Lecturer, Manish Singh</li>
   <li>Tutorial Coordinator, Niklas Mattisson</li>
+  <li>All Purpose Tool, Helvetix Victorinox</li>
   <li>Windows Section, Branko Collins</li>
   <li>Links Maintainer, Martijn Weisbeek</li>
   <li>Contributer, Guillermo S. Romero</li>
   <li>Contributer, Nathan C. Summers</li>
+  <li>Contributer, David Millet</li>
 </ul>
 <div class="subtitle">Tutorial Authors</div>
 <ul>
